Link to Python logo

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-title: Python programming courses
-description: Python programming courses
+title: Kurzy programovacího jazyka Python
+description: Kurzy programovacího jazyka Python
 
 heading_anchors: true
 search_enabled: false
