--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,7 @@
 title: Kurzy programovacího jazyka Python
 description: Kurzy programovacího jazyka Python
+baseurl: "/python-programming-courses"
+url: "https://tisnik.github.io"
 
 heading_anchors: true
 search_enabled: false
